--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,8 +2,12 @@
   <h1>'Allo, 'Allo!</h1>
   <p>You now have</p>
   <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
+      <li ng-repeat="thing in posts">{{thing}}</li>
   </ul>
+  <form ng-submit="addNewThing()">
+    <input type='text' ng-model="newThing">
+    <input type='submit' value="Submit">
+  </form>
   <p>installed.</p>
   <h3>Enjoy coding! - Yeoman</h3>
 </div>
