--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <h1>'Allo, 'Allo!</h1>
   <p>You now have</p>
   <ul>
-      <li ng-repeat="thing in posts">{{thing}}</li>
+      <li ng-repeat="(key,thing) in posts">key: {{key}}, thing: {{thing}}</li>
   </ul>
   <form ng-submit="addNewThing()">
     <input type='text' ng-model="newThing">
