clearing posts works as expected

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,6 +8,7 @@
     <input type='text' ng-model="newThing">
     <input type='submit' value="Submit">
   </form>
+  <a href ng-click='clearPosts()'>Clear posts</a>
   <p>installed.</p>
   <h3>Enjoy coding! - Yeoman</h3>
 </div>
