tricksy promises, kept losing data

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,6 +5,7 @@
       <li ng-repeat="(key,post) in posts">
         {{post}}
         <a href="#/posts/{{key}}">edit</a>
+        <a href="#/{{post.slug}}">view</a>
       </li>
   </ul>
   <form ng-submit="addNewThing()">
